--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/example42/puppet-solr.git
 [submodule "iptables"]
 	path = iptables
-	url = https://github.com/example42/puppet-iptables.git
+	url = https://github.com/leopku/puppet-iptables.git
 [submodule "wordpress"]
 	path = wordpress
 	url = https://github.com/example42/puppet-wordpress.git
@@ -103,6 +103,9 @@
 [submodule "postgresql"]
 	path = postgresql
 	url = https://github.com/example42/puppet-postgresql
+[submodule "proftpd"]
+	path = proftpd
+	url = https://github.com/leopku/puppet-proftpd
 [submodule "foreman"]
 	path = foreman
 	url = https://github.com/example42/puppet-foreman
